Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,69 +1,49 @@
+<!DOCTYPE html>
 <html>
-<head>
-<link rel="stylesheet" type="text/css" href="http://getbootstrap.com/dist/css/bootstrap.css" />
-<link href="http://fonts.googleapis.com/css?family=Rokkitt" rel="stylesheet" type="text/css">
-<link rel="stylesheet" type="text/css" href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css" />
 
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="Veganchallenge : testtest">
 
-</head>
-<body>
-  <div class="container">
-    <h1 style="line-height: 1.2em; color: #667;font-family: Rokkitt,serif;font-size: 70px;font-weight: 400;padding: 5px 0px 0px 0px;">Vegan Challange</h1>
-    <div style="padding-top : 20px">
-    <table class="table table-hover">
-      <thead>
-        <tr>
-          <th class="col-md-1"></th>
-          <th class="col-md-2"><b>BREAKFAST</b></th>
-          <th class="col-md-2"><b>SNACK 1</b></th>
-          <th class="col-md-2"><b>LUNCH</b></th>
-          <th class="col-md-2"><b>SNACK 2</b></th>
-          <th class="col-md-2"><b>DINNER</b></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr style="height : 100px;">
-          <td><b>Pirmadienis</b></td>
-          <td><a style = "cursor:pointer" class="RecipePopover" data-html="true" data-toggle="popover" title="Ypatingi makaronai" data-content="<p>Siam receptui reikes:</p><ul><li>Makaronu 1kg</li><li>Vandens litrai</li><li>Druska 0.25kg</li></ul><p>Ilgas receptas:</p><ul><li>Uzverdam vandeni</li><li>Iberiam druska ir makarus</li></ul><a href='makaronai.html'>Recepto nuoroda atskirame lange, su dar daugiau detaliu</a>">Ypatingi Makarai</a><p>Sutrumpintas aprasas. Bla bla bla makaronai, daug vitaminu ir gelezies, b12, kalcis, etc</p></td>
-          <td><p>Makarai</p><p>Kiti makarai, dar geresni, etc etc</p></td>
-          <td>Makarai</td>
-          <td>Makarai</td>
-          <td>Makarai</td>
-        </tr>
-        <tr style="height : 100px;">
-          <td><b>Antradienis</b></td>
-          <td>Makarai</td>
-          <td>Makarai</td>
-          <td>Makarai</td>
-          <td>Makarai</td>
-          <td>Makarai</td>
-        </tr>
-        <tr style="height : 100px;">
-          <td><b>Treèiadienis</b></td>
-          <td>Makarai</td>
-          <td>Makarai</td>
-          <td>Makarai</td>
-          <td>Makarai</td>
-          <td>Makarai</td>
-        </tr>
-        <tr style="height : 100px;">
-          <td><b>Ketvirtadienis</b></td>
-          <td>Makarai</td>
-          <td>Makarai</td>
-          <td>Makarai</td>
-          <td>Makarai</td>
-          <td>Makarai</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-  <script src="http://code.jquery.com/jquery.min.js"></script>
-  <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
-<script>
-$(document).ready(function(){
-    $(".RecipePopover").popover({
-        placement : 'right'
-    });
-});
-</script>
-<body>
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Veganchallenge</title>
+  </head>
+
+  <body>
+
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/mykk/VeganChallenge">View on GitHub</a>
+
+          <h1 id="project_title">Veganchallenge</h1>
+          <h2 id="project_tagline">testtest</h2>
+
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/mykk/VeganChallenge/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/mykk/VeganChallenge/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <p>This is my test page</p>
+      </section>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Veganchallenge maintained by <a href="https://github.com/mykk">mykk</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
+    
+
+  </body>
+</html>
