--- a/index.html
+++ b/index.html
@@ -1,49 +1,272 @@
 <!DOCTYPE html>
-<html>
-
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Veganchallenge : testtest">
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Veganchallenge</title>
-  </head>
-
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/mykk/VeganChallenge">View on GitHub</a>
-
-          <h1 id="project_title">Veganchallenge</h1>
-          <h2 id="project_tagline">testtest</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/mykk/VeganChallenge/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/mykk/VeganChallenge/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Example of Twitter Bootstrap 3 Affix Events</title>
+<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+<script type="text/javascript">
+$(document).ready(function(){
+    $("#myNav").affix({
+        offset: { 
+            top: 125 
+     	}
+    });
+});
+</script>
+<style type="text/css">
+    /* Custom Styles */
+    ul.nav-tabs{
+        width: 140px;
+        margin-top: 20px;
+        border-radius: 4px;
+        border: 1px solid #ddd;
+        box-shadow: 0 1px 4px rgba(0, 0, 0, 0.067);
+    }
+    ul.nav-tabs li{
+        margin: 0;
+        border-top: 1px solid #ddd;
+    }
+    ul.nav-tabs li:first-child{
+        border-top: none;
+    }
+    ul.nav-tabs li a{
+        margin: 0;
+        padding: 8px 16px;
+        border-radius: 0;
+    }
+    ul.nav-tabs li.active a, ul.nav-tabs li.active a:hover{
+        color: #fff;
+        background: #0088cc;
+        border: 1px solid #0088cc;
+    }
+    ul.nav-tabs li:first-child a{
+        border-radius: 4px 4px 0 0;
+    }
+    ul.nav-tabs li:last-child a{
+        border-radius: 0 0 4px 4px;
+    }
+    ul.nav-tabs.affix{
+        top: 30px; /* Set the top position of pinned element */
+    }
+</style>
+</head>
+<body data-spy="scroll" data-target="#myScrollspy">
+<div class="container">
+  <h1 style="line-height: 1.2em; color: #667;font-family: Rokkitt,serif;font-size: 70px;font-weight: 400;padding: 5px 0px 0px 0px;">Vegan Challange</h1>
+  <div class="row">
+    <div class="col-xs-3" id="myScrollspy">
+      <ul class="nav nav-tabs nav-stacked" id="myNav">
+        <li class="active"><a href="#first">Pirma savaitė</a></li>
+        <li><a href="#second">Antra savaitė</a></li>
+        <li><a href="#third">Trečia savaitė</a></li>
+        <li><a href="#fourth">Ketvirta savaitė</a></li>
+      </ul>
     </div>
+    <div class="col-xs-9">
+      <h2 id="first">Pirma savaitė</h2>
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th class="col-md-1"></th>
+            <th class="col-md-2"><b>Pusryčiai</b></th>
+            <th class="col-md-2"><b>Priešpiečiai</b></th>
+            <th class="col-md-2"><b>Pietūs</b></th>
+            <th class="col-md-2"><b>Užkandis</b></th>
+            <th class="col-md-2"><b>Vakarienė</b></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr style="height : 100px;">
+            <td><b>Pirmadienis</b></td>
+            <td><a style = "cursor:pointer" class="RecipePopover" data-html="true" data-toggle="popover" title="Ypatingi makaronai" data-content="<p>Siam receptui reikes:</p><ul><li>Makaronu 1kg</li><li>Vandens litrai</li><li>Druska 0.25kg</li></ul><p>Ilgas receptas:</p><ul><li>Uzverdam vandeni</li><li>Iberiam druska ir makarus</li></ul><a href='makaronai.html'>Recepto nuoroda atskirame lange, su dar daugiau detaliu</a>">Ypatingi Makarai</a><p>Sutrumpintas aprasas. Bla bla bla makaronai, daug vitaminu ir gelezies, b12, kalcis, etc</p></td>
+            <td><p>Makarai</p><p>Kiti makarai, dar geresni, etc etc</p></td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+          </tr>
+          <tr style="height : 100px;">
+            <td><b>Antradienis</b></td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+          </tr>
+          <tr style="height : 100px;">
+            <td><b>Trečiadienis</b></td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+          </tr>
+          <tr style="height : 100px;">
+            <td><b>Ketvirtadienis</b></td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+          </tr>
+        </tbody>
+      </table>
+      
+      <h2 id="second">Antra savaitė</h2>
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th class="col-md-1"></th>
+            <th class="col-md-2"><b>Pusryčiai</b></th>
+            <th class="col-md-2"><b>Priešpiečiai</b></th>
+            <th class="col-md-2"><b>Pietūs</b></th>
+            <th class="col-md-2"><b>Užkandis</b></th>
+            <th class="col-md-2"><b>Vakarienė</b></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr style="height : 100px;">
+            <td><b>Pirmadienis</b></td>
+            <td><a style = "cursor:pointer" class="RecipePopover" data-html="true" data-toggle="popover" title="Ypatingi makaronai" data-content="<p>Siam receptui reikes:</p><ul><li>Makaronu 1kg</li><li>Vandens litrai</li><li>Druska 0.25kg</li></ul><p>Ilgas receptas:</p><ul><li>Uzverdam vandeni</li><li>Iberiam druska ir makarus</li></ul><a href='makaronai.html'>Recepto nuoroda atskirame lange, su dar daugiau detaliu</a>">Ypatingi Makarai</a><p>Sutrumpintas aprasas. Bla bla bla makaronai, daug vitaminu ir gelezies, b12, kalcis, etc</p></td>
+            <td><p>Makarai</p><p>Kiti makarai, dar geresni, etc etc</p></td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+          </tr>
+          <tr style="height : 100px;">
+            <td><b>Antradienis</b></td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+          </tr>
+          <tr style="height : 100px;">
+            <td><b>Trečiadienis</b></td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+          </tr>
+          <tr style="height : 100px;">
+            <td><b>Ketvirtadienis</b></td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+          </tr>
+        </tbody>
+      </table>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <p>This is my test page</p>
-      </section>
+      <h2 id="third">Trečia savaitė</h2>
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th class="col-md-1"></th>
+            <th class="col-md-2"><b>Pusryčiai</b></th>
+            <th class="col-md-2"><b>Priešpiečiai</b></th>
+            <th class="col-md-2"><b>Pietūs</b></th>
+            <th class="col-md-2"><b>Užkandis</b></th>
+            <th class="col-md-2"><b>Vakarienė</b></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr style="height : 100px;">
+            <td><b>Pirmadienis</b></td>
+            <td><a style = "cursor:pointer" class="RecipePopover" data-html="true" data-toggle="popover" title="Ypatingi makaronai" data-content="<p>Siam receptui reikes:</p><ul><li>Makaronu 1kg</li><li>Vandens litrai</li><li>Druska 0.25kg</li></ul><p>Ilgas receptas:</p><ul><li>Uzverdam vandeni</li><li>Iberiam druska ir makarus</li></ul><a href='makaronai.html'>Recepto nuoroda atskirame lange, su dar daugiau detaliu</a>">Ypatingi Makarai</a><p>Sutrumpintas aprasas. Bla bla bla makaronai, daug vitaminu ir gelezies, b12, kalcis, etc</p></td>
+            <td><p>Makarai</p><p>Kiti makarai, dar geresni, etc etc</p></td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+          </tr>
+          <tr style="height : 100px;">
+            <td><b>Antradienis</b></td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+          </tr>
+          <tr style="height : 100px;">
+            <td><b>Trečiadienis</b></td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+          </tr>
+          <tr style="height : 100px;">
+            <td><b>Ketvirtadienis</b></td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+          </tr>
+        </tbody>
+      </table>
+      <h2 id="fourth">Ketvirta savaitė</h2>
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th class="col-md-1"></th>
+            <th class="col-md-2"><b>Pusryčiai</b></th>
+            <th class="col-md-2"><b>Priešpiečiai</b></th>
+            <th class="col-md-2"><b>Pietūs</b></th>
+            <th class="col-md-2"><b>Užkandis</b></th>
+            <th class="col-md-2"><b>Vakarienė</b></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr style="height : 100px;">
+            <td><b>Pirmadienis</b></td>
+            <td><a style = "cursor:pointer" class="RecipePopover" data-html="true" data-toggle="popover" title="Ypatingi makaronai" data-content="<p>Siam receptui reikes:</p><ul><li>Makaronu 1kg</li><li>Vandens litrai</li><li>Druska 0.25kg</li></ul><p>Ilgas receptas:</p><ul><li>Uzverdam vandeni</li><li>Iberiam druska ir makarus</li></ul><a href='makaronai.html'>Recepto nuoroda atskirame lange, su dar daugiau detaliu</a>">Ypatingi Makarai</a><p>Sutrumpintas aprasas. Bla bla bla makaronai, daug vitaminu ir gelezies, b12, kalcis, etc</p></td>
+            <td><p>Makarai</p><p>Kiti makarai, dar geresni, etc etc</p></td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+          </tr>
+          <tr style="height : 100px;">
+            <td><b>Antradienis</b></td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+          </tr>
+          <tr style="height : 100px;">
+            <td><b>Trečiadienis</b></td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+          </tr>
+          <tr style="height : 100px;">
+            <td><b>Ketvirtadienis</b></td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+            <td>Makarai</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Veganchallenge maintained by <a href="https://github.com/mykk">mykk</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
+  </div>
+</div>
+  <script src="http://code.jquery.com/jquery.min.js"></script>
+  <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+  <script>
+  $(document).ready(function(){
+      $(".RecipePopover").popover({
+          placement : 'right'
+      });
+  });
+  </script>
+</body>
 </html>
