--- a/index.html
+++ b/index.html
@@ -51,11 +51,28 @@ $(document).ready(function(){
     ul.nav-tabs.affix{
         top: 30px; /* Set the top position of pinned element */
     }
+    h1
+    {
+      line-height: 1.2em; 
+      color: #667;
+      font-family: Rokkitt,serif;
+      font-size: 70px;
+      font-weight: 400;
+      padding: 5px 0px 0px 0px;
+    }
+    h2
+    {
+      line-height: 1em; 
+      color: #667;
+      font-size: 40px;
+      font-weight: 300;
+      padding: 5px 0px 0px 0px;
+    }
 </style>
 </head>
 <body data-spy="scroll" data-target="#myScrollspy">
 <div class="container">
-  <h1 style="line-height: 1.2em; color: #667;font-family: Rokkitt,serif;font-size: 70px;font-weight: 400;padding: 5px 0px 0px 0px;">Vegan Challange</h1>
+  <h1>Vegan Challange</h1>
   <div class="row">
     <div class="col-xs-3" id="myScrollspy">
       <ul class="nav nav-tabs nav-stacked" id="myNav">
