fixed minor issues

--- a/container.html
+++ b/container.html
@@ -1,5 +1,5 @@
 ﻿<div class="container">
-  <h1>Vegan Challange</h1>
+  <h1>Vegan Challenge</h1>
   <div class="row">
     <div class="col-xs-3" id="myScrollspy">
       <ul class="nav nav-tabs nav-stacked" id="myNav">
