--- a/container.html
+++ b/container.html
@@ -9,69 +9,7 @@
         <li><a href="#fourth">Ketvirta savaitė</a></li>
       </ul>
     </div>
-    <div class="col-xs-9">
-      <h2 id="first">Pirma savaitė</h2>
-      <table class="table table-hover">
-        <thead>
-          <tr>
-            <th class="col-md-1"></th>
-            <th class="col-md-2"><b>Pusryčiai</b></th>
-            <th class="col-md-2"><b>Priešpiečiai</b></th>
-            <th class="col-md-2"><b>Pietūs</b></th>
-            <th class="col-md-2"><b>Užkandis</b></th>
-            <th class="col-md-2"><b>Vakarienė</b></th>
-          </tr>
-        </thead>
-        <tbody id="first-week">
-        </tbody>
-      </table>
-      
-      <h2 id="second">Antra savaitė</h2>
-      <table class="table table-hover">
-        <thead>
-          <tr>
-            <th class="col-md-1"></th>
-            <th class="col-md-2"><b>Pusryčiai</b></th>
-            <th class="col-md-2"><b>Priešpiečiai</b></th>
-            <th class="col-md-2"><b>Pietūs</b></th>
-            <th class="col-md-2"><b>Užkandis</b></th>
-            <th class="col-md-2"><b>Vakarienė</b></th>
-          </tr>
-        </thead>
-        <tbody id="second-week">
-        </tbody>
-      </table>
-
-      <h2 id="third">Trečia savaitė</h2>
-      <table class="table table-hover">
-        <thead>
-          <tr>
-            <th class="col-md-1"></th>
-            <th class="col-md-2"><b>Pusryčiai</b></th>
-            <th class="col-md-2"><b>Priešpiečiai</b></th>
-            <th class="col-md-2"><b>Pietūs</b></th>
-            <th class="col-md-2"><b>Užkandis</b></th>
-            <th class="col-md-2"><b>Vakarienė</b></th>
-          </tr>
-        </thead>
-        <tbody id="third-week">
-        </tbody>
-      </table>
-      <h2 id="fourth">Ketvirta savaitė</h2>
-      <table class="table table-hover">
-        <thead>
-          <tr>
-            <th class="col-md-1"></th>
-            <th class="col-md-2"><b>Pusryčiai</b></th>
-            <th class="col-md-2"><b>Priešpiečiai</b></th>
-            <th class="col-md-2"><b>Pietūs</b></th>
-            <th class="col-md-2"><b>Užkandis</b></th>
-            <th class="col-md-2"><b>Vakarienė</b></th>
-          </tr>
-        </thead>
-        <tbody id="fourth-week">
-        </tbody>
-      </table>
+    <div id="weeks" class="col-xs-9">
     </div>
   </div>
 </div>
