fixed affix error

--- a/week_table.html
+++ b/week_table.html
@@ -1,4 +1,4 @@
-<h2 id="{{WEEK_NO}}">{{WEEK}}</h2>
+<h2 id="{{WEEK_ID}}">{{WEEK}}</h2>
 <table class="table table-hover">
   <thead>
     <tr>
@@ -10,6 +10,6 @@
       <th class="col-md-2"><b>{{meal_4}}</b></th>
     </tr>
   </thead>
-  <tbody id="{{WEEK_ID}}">
+  <tbody id="{{WEEK_ID}}-week">
   </tbody>
 </table>
