--- a/weekday_recipes.html
+++ b/weekday_recipes.html
@@ -1,4 +1,4 @@
-<tr style="height : 100px;">
+<tr id = "{{WEEK}}{{WEEKDAY}}" style="height : 100px;">
   <td><b>{{WEEKDAY}}</b></td>
   <td><a style = "cursor:pointer" class="RecipePopover" data-html="true" data-toggle="popover" title="Ypatingi makaronai" data-content="<p>Siam receptui reikes:</p><ul><li>Makaronu 1kg</li><li>Vandens litrai</li><li>Druska 0.25kg</li></ul><p>Ilgas receptas:</p><ul><li>Uzverdam vandeni</li><li>Iberiam druska ir makarus</li></ul><a href='makaronai.html'>Recepto nuoroda atskirame lange, su dar daugiau detaliu</a>">Ypatingi Makarai</a><p>Sutrumpintas aprasas. Bla bla bla makaronai, daug vitaminu ir gelezies, b12, kalcis, etc</p></td>
   <td><p>Makarai</p><p>Kiti makarai, dar geresni, etc etc</p></td>
