--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-	<title>Bootstrap In Practice - Landing Page Example</title>
+	<title>Vegužis – išmėgink augalinę mitybą su Tuščiais narvais!</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<link href="http://fonts.googleapis.com/css?family=Abel|Open+Sans:400,600" rel="stylesheet" />
+<link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
 
 	<style>
 
@@ -28,9 +28,20 @@
 		}
 
 		h1 {
-			font-family: "Abel", Arial, sans-serif;
-			font-weight: 400;
+            font-family: 'Slabo 27px', serif;
+            font-weight: 400;
 			font-size: 40px;
+		}
+
+        p {
+            font-family: 'Slabo 27px', serif;
+            font-weight: 300;
+			font-size: 20px;
+		}
+        li {
+            font-family: 'Slabo 27px', serif;
+            font-weight: 250;
+			font-size: 18px;
 		}
 
 		/* Override B3 .panel adding a subtly transparent background */
@@ -49,19 +60,28 @@
 
 	<div class="container">
 		<div class="row">
-			<div class="col-md-6 col-md-offset-3 panel panel-default">
+			<div class="col-md-9 col-md-offset-1 panel panel-default">
 
-				<h1 class="margin-base-vertical">Have you ever seen the rain?</h1>
+				<h1 class="margin-base-vertical">Vegužis – augalinės mitybos mėnesis lengvai</h1>
 
-				<p>
-					Someone told me long ago there's a calm before the storm. I know, It's been comin for some time.
+                <p>
+					Ar žinojote, jog augalinė mityba – tai paprastas, sveikas, draugiškas aplinkai ir gyvūnams pasirinkimas?
 				</p>
+                <ul>	
+                    <li>
+                        Jeigu mylite gyvūnus: Lietuvos ir pasaulio fermose kasdien kenčia ir miršta milijardai gyvūnų. Jeigu jums rūpi gyvūnai, neprisidėkite prie to!
+                    </li>
+                    
+                    <li>
+                        Jeigu jums svarbi švari aplinka: ar žinojote, kad pramoninė gyvulininkystė yra tarp pagrindinių oro ir vandens teršėjų?
+                    </li>
+                    
+                    <li>
+                        Jeigu jums rūpi jūsų sveikata: augalinis maistas gali padėti išvengti tokių susirgimų kaip vėžys bei širdies ir kraujagislių ligų!
+                    </li>
+                </ul>	
 				<p>
-					When it's over, so they say, it'll rain a sunny day. I know,	Shinin down like water.
-				</p>
-
-				<p>
-					I want to know, have you ever seen the rain?
+					Apie visa tai ir dar daugiau papasakosime visą gegužės mėnesį, kviečiame priimti šį iššūkį, ir mes jums padėsime atrasti augalinę mitybą!
 				</p>
 
 				<form class="margin-base-vertical">
@@ -69,9 +89,9 @@
 						<span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span></span>
 						<input type="text" class="form-control input-lg" name="email" />
 					</p>
-					<p class="help-block text-center"><small>We won't send you spam. Unsubscribe at any time.</small></p>
+					<p class="help-block text-center"><small>Mes nesiunčiam šlamšto.</small></p>
 					<p class="text-center">
-						<button type="submit" class="btn btn-success btn-lg">Keep me posted</button>
+						<button type="submit" class="btn btn-success btn-lg">Registruotis</button>
 					</p>
 					</span>
 				</form>
