adding reg form

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-	<title>Vegužis – išmėgink augalinę mitybą su Tuščiais narvais!</title>
+	<title>Vegegužė – atrask veganizmą su Tuščiais narvais!</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -62,10 +62,10 @@
 		<div class="row">
 			<div class="col-md-9 col-md-offset-1 panel panel-default">
 
-				<h1 class="margin-base-vertical">Vegužis – augalinės mitybos mėnesis lengvai</h1>
+				<h1 class="margin-base-vertical">Vegegužė – veganizmo mėnesis lengvai</h1>
 
                 <p>
-					Ar žinojote, jog augalinė mityba – tai paprastas, sveikas, draugiškas aplinkai ir gyvūnams pasirinkimas?
+					Ar žinojote, jog veganinė mityba – tai paprastas, sveikas, draugiškas aplinkai ir gyvūnams pasirinkimas?
 				</p>
                 <ul>	
                     <li>
@@ -73,25 +73,25 @@
                     </li>
                     
                     <li>
-                        Jeigu jums svarbi švari aplinka: ar žinojote, kad pramoninė gyvulininkystė yra tarp pagrindinių oro ir vandens teršėjų?
+                        Jeigu jums svarbi švari aplinka: ar žinojote, kad pramoninė gyvulininkystė yra tarp pagrindinių oro ir vandens teršėjų? Rinkdamiesi augalinį maistą gerokai sumažinsite jums tenkančią aplinkos taršą.
                     </li>
                     
                     <li>
-                        Jeigu jums rūpi jūsų sveikata: augalinis maistas gali padėti išvengti tokių susirgimų kaip vėžys bei širdies ir kraujagislių ligų!
+                        Jeigu jums rūpi jūsų sveikata: augalinis maistas gali padėti išvengti tokių susirgimų kaip vėžys bei širdies ir kraujagislių ligos!
                     </li>
                 </ul>	
 				<p>
-					Apie visa tai ir dar daugiau papasakosime visą gegužės mėnesį, kviečiame priimti šį iššūkį, ir mes jums padėsime atrasti augalinę mitybą!
+					Apie visa tai ir dar daugiau papasakosime visą gegužės mėnesį, kviečiame priimti šį iššūkį, ir mes jums padėsime atrasti veganinę mitybą!
 				</p>
 
-				<form class="margin-base-vertical">
+				<form class="margin-base-vertical" action="//tustinarvai.us14.list-manage.com/subscribe/post?u=1112e8a2a7252b418a889a2e6&amp;id=b3a1afb642" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate>
 					<p class="input-group">
 						<span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span></span>
-						<input type="text" class="form-control input-lg" name="email" />
+						<input type="email" value="" name="email" class="form-control input-lg" id="mce-EMAIL" placeholder="email address" required>
 					</p>
 					<p class="help-block text-center"><small>Mes nesiunčiam šlamšto.</small></p>
 					<p class="text-center">
-						<button type="submit" class="btn btn-success btn-lg">Registruotis</button>
+						<button type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-success btn-lg">Registruotis</button>
 					</p>
 					</span>
 				</form>
