--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
 				</p>
                 <ul>	
                     <li>
-                        Jeigu mylite gyvūnus: Lietuvos ir pasaulio fermose kasdien kenčia ir miršta milijardai gyvūnų. Jeigu jums rūpi gyvūnai, neprisidėkite prie to!
+                        <u>Jeigu mylite gyvūnus</u>: Lietuvos ir pasaulio fermose kasdien kenčia ir miršta milijardai gyvūnų. Jeigu jums rūpi gyvūnai, neprisidėkite prie to!
                     </li>
                     
                     <li>
-                        Jeigu jums svarbi švari aplinka: ar žinojote, kad pramoninė gyvulininkystė yra tarp pagrindinių oro ir vandens teršėjų? Rinkdamiesi augalinį maistą gerokai sumažinsite jums tenkančią aplinkos taršą.
+                        <u>Jeigu jums svarbi švari aplinka</u>: ar žinojote, kad pramoninė gyvulininkystė yra tarp pagrindinių oro ir vandens teršėjų? Rinkdamiesi augalinį maistą gerokai sumažinsite jums tenkančią aplinkos taršą.
                     </li>
                     
                     <li>
-                        Jeigu jums rūpi jūsų sveikata: augalinis maistas gali padėti išvengti tokių susirgimų kaip vėžys bei širdies ir kraujagislių ligos!
+                        <u>Jeigu jums rūpi jūsų sveikata</u>: augalinis maistas gali padėti išvengti tokių susirgimų kaip vėžys bei širdies ir kraujagislių ligos!
                     </li>
                 </ul>	
 				<p>
@@ -87,7 +87,7 @@
 				<form class="margin-base-vertical" action="//tustinarvai.us14.list-manage.com/subscribe/post?u=1112e8a2a7252b418a889a2e6&amp;id=b3a1afb642" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate>
 					<p class="input-group">
 						<span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span></span>
-						<input type="email" value="" name="email" class="form-control input-lg" id="mce-EMAIL" placeholder="email address" required>
+						<input type="email" value="" name="EMAIL" class="form-control input-lg" id="mce-EMAIL" placeholder="email address" required>
 					</p>
 					<p class="help-block text-center"><small>Mes nesiunčiam šlamšto.</small></p>
 					<p class="text-center">
