adding space between li lines

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
             font-family: 'Slabo 27px', serif;
             font-weight: 250;
 			font-size: 18px;
+            margin: 10px 0;
+
 		}
 
 		/* Override B3 .panel adding a subtly transparent background */
