--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				<h1 class="margin-base-vertical">Vegegužė – veganizmo mėnesis lengvai</h1>
 
                 <p>
-					Ar žinojote, jog veganinė mityba – tai paprastas, sveikas, draugiškas aplinkai ir gyvūnams pasirinkimas?
+					Ar žinojote, jog veganiška mityba – tai paprastas, sveikas, draugiškas aplinkai ir gyvūnams pasirinkimas?
 				</p>
                 <ul>	
                     <li>
@@ -79,11 +79,11 @@
                     </li>
                     
                     <li>
-                        <u>Jeigu jums rūpi jūsų sveikata</u>: augalinis maistas gali padėti išvengti tokių susirgimų kaip vėžys bei širdies ir kraujagislių ligos!
+                        <u>Jeigu jums rūpi jūsų sveikata</u>: augalinis maistas gali padėti išvengti tokių susirgimų kaip vėžys bei širdies ir kraujagyslių ligos!
                     </li>
                 </ul>	
 				<p>
-					Apie visa tai ir dar daugiau papasakosime visą gegužės mėnesį, kviečiame priimti šį iššūkį, ir mes jums padėsime atrasti veganinę mitybą!
+					Apie visa tai ir dar daugiau papasakosime per visą gegužės mėnesį, kviečiame priimti šį iššūkį, ir mes jums padėsime atrasti veganišką mitybą!
 				</p>
 
 				<form class="margin-base-vertical" action="//tustinarvai.us14.list-manage.com/subscribe/post?u=1112e8a2a7252b418a889a2e6&amp;id=b3a1afb642" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate>
