--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    
+  <meta property="og:title" content="Vegegužė" /> 
+  <meta property="og:image" content="http://vegeguze.lt/images/augalybe.jpg" /> 
+  <meta property="og:description" content="Atrask veganizmą su Tuščiais narvais!" /> 
+  <meta property="og:url" content="http://vegeguze.lt">
+
 <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
 
 	<style>
