changed mailing list

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 					Apie visa tai ir dar daugiau papasakosime per visą gegužės mėnesį, kviečiame priimti šį iššūkį, ir mes jums padėsime atrasti veganišką mitybą!
 				</p>
 
-				<form class="margin-base-vertical" action="//tustinarvai.us14.list-manage.com/subscribe/post?u=1112e8a2a7252b418a889a2e6&amp;id=b3a1afb642" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate>
+				<form class="margin-base-vertical" action="https://vegeguze.us14.list-manage.com/subscribe/post?u=1112e8a2a7252b418a889a2e6&amp;id=9627122e22" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate>
 					<p class="input-group">
 						<span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span></span>
 						<input type="email" value="" name="EMAIL" class="form-control input-lg" id="mce-EMAIL" placeholder="email address" required>
