--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
             font-weight: 300;
 			font-size: 20px;
 		}
+      
+      label {
+            font-family: 'Slabo 27px', serif;
+            font-weight: 300;
+			font-size: 20px;
+		}
         li {
             font-family: 'Slabo 27px', serif;
             font-weight: 250;
@@ -62,10 +68,18 @@
 		.margin-base-vertical {
 			margin: 40px 0;
 		}
+      
+		.left-ident {
+			margin-left: 3px;
+		}
+
+      .left-ident-5{
+			margin-left: 5px;
+		}
 
 	</style>
 
-</head>
+</head>`
 <body>
 
 	<div class="container">
@@ -99,15 +113,17 @@
 						<span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span></span>
 						<input type="email" value="" name="EMAIL" class="form-control input-lg" id="mce-EMAIL" placeholder="email address" required>
 					</p>
+               <div class="mc-field-group input-group left-ident">
+                  <input checked type="checkbox" value="1" name="group[6983][1]" id="mce-group[6983]-6983-0"><label class="left-ident-5">Prenumeruoti Tuščių narvų naujienlaiškį</label>
+               </div>
 					<p class="help-block text-center"><small>Mes nesiunčiam šlamšto.</small></p>
 					<p class="text-center">
-						<button type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-success btn-lg">Registruotis</button>
+						<button type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-success btn-lg" onclick="test()">Registruotis</button>
 					</p>
 					</span>
 				</form>
 			</div><!-- //main content -->
 		</div><!-- //row -->
 	</div> <!-- //container -->
-
 </body>
 </html>
