subscribe to Tusti narvai is unchecked by default

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 						<input type="email" value="" name="EMAIL" class="form-control input-lg" id="mce-EMAIL" placeholder="email address" required>
 					</p>
                <div class="mc-field-group input-group left-ident">
-                  <input checked type="checkbox" value="1" name="group[6983][1]" id="mce-group[6983]-6983-0"><label class="left-ident-5">Prenumeruoti Tuščių narvų naujienlaiškį</label>
+                  <input type="checkbox" value="1" name="group[6983][1]" id="mce-group[6983]-6983-0"><label class="left-ident-5">Prenumeruoti Tuščių narvų naujienlaiškį</label>
                </div>
 					<p class="help-block text-center"><small>Mes nesiunčiam šlamšto.</small></p>
 					<p class="text-center">
